click on title to go to home

--- a/app/styles.css
+++ b/app/styles.css
@@ -1,14 +1,12 @@
 @font-face {
-  font-family: "Bacalisties";
-  src: url("/fonts/Bacalisties.ttf");
+  font-family: 'Bacalisties';
+  src: url('/fonts/Bacalisties.ttf');
   font-style: normal;
   font-weight: 400;
   font-display: swap;
 }
 
 /* html { font-size: calc(1em + 1vw) } */
-
-
 
 body {
   background-image: url(https://images.unsplash.com/photo-1573126617899-41f1dffb196c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80);
@@ -21,7 +19,7 @@ body {
   padding-top: 3vh !important;
   margin: auto !important;
   /* background: rgba(170, 166, 190, 0.356); */
-  padding : 2vw;
+  padding: 2vw;
 }
 
 .mainTitle {
@@ -29,6 +27,7 @@ body {
   font-family: Bacalisties;
   text-align: center !important;
   color: white;
+  cursor: pointer;
 }
 
 .calendarContainer {
@@ -46,11 +45,10 @@ body {
 }
 
 main {
-  background-color : #fff;
+  background-color: #fff;
   opacity: 0.9;
   margin-bottom: 15vh;
   min-height: 30vh;
-
 }
 
 .footer {
